<resources>
    <string name="app_name">AutoApp</string>
    <string name="producer">Producer</string>
    <string name="model">Model</string>
    <string name="year_of_issue">Year of issue</string>
    <string name="cost">Cost</string>
    <string name="car">Car</string>
    <string name="create_new_auto">Create new auto</string>
    <string name="year">Year</string>
    <string name="title">Title</string>
    <string name="create">Create</string>
    <string name="change_auto">Change auto</string>
    <string name="change">Change</string>
    <string name="select_remote_service_please">Select remote Service, please</string>
    <string name="backendless">BackendLess</string>
    <string name="mock">Mock</string>
    <string name="id">Id</string>
    <string name="image">Image</string>
    <string name="objectid">ObjectId</string>
    <string name="confirm">Confirm</string>
    <string name="save">Save</string>
    <string name="go_to_list">Go to list</string>
</resources>