<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/margin_16dp"
    android:baselineAligned="false"
    android:orientation="horizontal"
    android:weightSum="5">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="3"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/producer"
            android:textColor="@color/black"
            android:textSize="@dimen/tv_18sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/model"
            android:textColor="@color/black"
            android:textSize="@dimen/tv_18sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/year_of_issue"
            android:textColor="@color/black"
            android:textSize="@dimen/tv_18sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cost"
            android:textColor="@color/black"
            android:textSize="@dimen/tv_18sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvProducer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="@dimen/tv_18sp"
            android:textStyle="bold|italic"
            tools:text="Italy" />

        <TextView
            android:id="@+id/tvModel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="@dimen/tv_18sp"
            android:textStyle="bold|italic"
            tools:text="Ferrari Portofino M." />

        <TextView
            android:id="@+id/tvYearOfIssue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="@dimen/tv_18sp"
            android:textStyle="bold|italic"
            tools:text="2021" />

        <TextView
            android:id="@+id/tvCost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="@dimen/tv_18sp"
            android:textStyle="bold|italic"
            tools:text="$3 000 000" />

    </LinearLayout>


</LinearLayout>